# EECS-471-Final-Project

./: .clangd  .gitignore  build_student.sh  new_forward.cu  run_nsight.sh  run_student.sh  submit_code.sh
support/: CMakeLists.txt  new_forward.cpp  pyt_all_reduce_kernel.hh  reader.py  sandbox.cpp  submission.py
